--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.6.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "~1.4.4",
@@ -19,6 +20,7 @@
     "express-validator": "^6.9.2",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "jquery": "^3.5.1",
     "mongoose": "^5.11.14",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
